--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.0"
+    ext.okhttp_version = "3.14.9"
+    ext.retrofit_version = "2.9.0"
+
     repositories {
         google()
         mavenCentral()
