--- a/recorder/build.gradle
+++ b/recorder/build.gradle
@@ -35,6 +35,8 @@ android {
 }
 
 dependencies {
+//    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation("com.squareup.okhttp3:okhttp:$okhttp_version")
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
