--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.5.0"
     ext.okhttp_version = "3.14.9"
     ext.retrofit_version = "2.9.0"
+    ext.kotlin_serialization_version = "1.2.1"
 
     repositories {
         google()
