--- a/recorder/build.gradle
+++ b/recorder/build.gradle
@@ -1,13 +1,19 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-//    id 'org.jetbrains.kotlin.multiplatform'
     id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+
+    sourceSets {
+        // Encapsulates configurations for the main source set.
+        main.java.srcDirs = ['src/main/kotlin']
+        test.java.srcDirs = ['src/test/kotlin']
+        androidTest.java.srcDirs = ['src/androidTest/kotlin']
+    }
 
     defaultConfig {
         minSdkVersion 26
@@ -35,9 +41,8 @@ android {
 }
 
 dependencies {
-//    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation("com.squareup.okhttp3:okhttp:$okhttp_version")
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_serialization_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
