--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ android {
 
 dependencies {
     api project(":recorder")
-    kapt "com.uber.motif:motif-compiler:0.3.4"
+    annotationProcessor "com.uber.motif:motif-compiler:0.3.4"
     implementation "com.uber.motif:motif:0.3.4"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_serialization_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
