--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 dependencies {
     api project(":recorder")
     implementation "com.uber.motif:motif:0.3.4"
+    implementation 'androidx.work:work-runtime:2.5.0'
     kapt "com.uber.motif:motif-compiler:0.3.4"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_serialization_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
