--- a/model-protobuf/build.gradle
+++ b/model-protobuf/build.gradle
@@ -8,9 +8,14 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
+sourceSets{
+    main.java.srcDirs += ['build/generated/source/proto/main/java']
+}
+
 dependencies {
     // You need to depend on the lite runtime library, not protobuf-java
     implementation 'com.google.protobuf:protobuf-javalite:3.8.0'
+    implementation("com.squareup.okhttp3:okhttp:$okhttp_version")
 }
 
 protobuf {
