--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = "NetworkRecording"
 include ':sample'
 include ':recorder'
 include ':model-protobuf'
+include ':model-kotlinx-serialization'
