--- a/model-protobuf/build.gradle
+++ b/model-protobuf/build.gradle
@@ -13,6 +13,7 @@ sourceSets{
 }
 
 dependencies {
+    api project(":model-base")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     // You need to depend on the lite runtime library, not protobuf-java
     implementation 'com.google.protobuf:protobuf-javalite:3.8.0'
